--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <head>
   <title>Флэшкарточкер</title>
-  <link rel="stylesheet" href="application.css">
+  <%= stylesheet_link_tag 'application' %>
 </head>
 
 <body>
