--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <head>
   <title>Флэшкарточкер</title>
-  <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag 'bootstrap.min', 'application' %>
+  <%= javascript_include_tag 'application' %>
 </head>
 
 <body>
@@ -8,9 +9,13 @@
 
     <header class="clearfix">
       <h1>Флэшкарточкер</h1>
-      <ul class="navigation-links">
-        <li><a href="#">Все карточки</a></li>
-        <li><a href="#">Добавить карточку</a></li>
+      <ul class="navigation-links nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Все карточки</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Добавить карточку</a>
+        </li>
       </ul>
     </header>
 
