Lost title translate

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <title>Флэшкарточкер</title>
+  <title><%=t(:title)%></title>
   <%= stylesheet_link_tag 'bootstrap.min', 'application' %>
   <%= javascript_include_tag 'application' %>
 </head>
