--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
       <h1><%=t(:title)%></h1>
       <ul class="navigation-links nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#"><%=t(:all_cards)%></a>
+          <%= link_to t(:all_cards), cards_path, class: 'nav-link active' %>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#"><%=t(:add_card)%></a>
