--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -4,7 +4,9 @@
 
 <body>
   <section class="container">
-    <table class="table">
+    <h1><%=t(:all_cards)%></h1>
+
+    <table class="table mt-4">
       <thead class="thead-dark">
         <tr>
           <th><%=t(:original_text)%></th>
