--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -2,6 +2,8 @@
 <%= simple_form_for @card do |f| %>
   <%= f.input :original_text, label: t(:original_text_input), error: t(:original_text_input_err) %>
   <%= f.input :translated_text, label: t(:translated_text_input), error: t(:translated_text_input_err) %>
-  <%= f.input :review_date, as: :date, html5: true, label: t(:review_date_input), :required => false %>
+  <%= f.input :review_date, input_html: { value: DateTime.now.to_date.to_s },
+      as: :date, html5: true, error: t(:review_date_input_err),
+      label: t(:review_date_input), :required => false %>
   <%= f.button :submit, t(:add_card), class: 'btn-primary'%>
 <% end %>
