--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
   <title><%=@page_title%></title>
   <%= stylesheet_link_tag 'bootstrap.min', 'application' %>
   <%= javascript_include_tag 'application' %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
   <section id="container">
