--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,5 +1,4 @@
-<% @page_title = t(:all_cards) %>
-<h1><%=@page_title%></h1>
+<%= render partial: 'partials/page-title', locals: {title: t(:all_cards)} %>
 
 <table class="table mt-4">
   <thead class="thead-dark">
