Update card transaction

--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -17,7 +17,9 @@
       <td>
         <div>
           <button class="btn card-action-btn mr-1">
-            <%=image_tag 'edit.png', :width => '24' %>
+            <%= link_to edit_card_path(card) do %>
+              <%=image_tag 'edit.png', :width => '24' %>
+            <% end %>
           </button>
 
           <button class="btn card-action-btn">
