--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -1,9 +1,2 @@
 <%= render partial: 'partials/page-title', locals: {title: t(:add_card)} %>
-<%= simple_form_for @card, html: {class: 'mt-4'} do |f| %>
-  <%= f.input :original_text, label: t(:original_text_input), error: t(:original_text_input_err) %>
-  <%= f.input :translated_text, label: t(:translated_text_input), error: t(:translated_text_input_err) %>
-  <%= f.input :review_date, input_html: { value: DateTime.now.to_date.to_s },
-      as: :date, html5: true, error: t(:review_date_input_err),
-      label: t(:review_date_input), :required => false %>
-  <%= f.button :submit, t(:add_card), class: 'btn-primary mt-2'%>
-<% end %>
+<%= render partial: 'form', locals: {submit_txt: t(:add_card)} %>
