--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -34,3 +34,9 @@
     </tr>
   <% end %>
 </table>
+
+<% if flash.key?('notice')%>
+  <div class="alert alert-primary notice" role="alert">
+    <%=flash.notice%>
+  </div>
+<% end %>
