--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -1,2 +1,2 @@
 <%= render partial: 'partials/page-title', locals: {title: t(:add_card)} %>
-<%= render partial: 'form', locals: {submit_txt: t(:add_card)} %>
+<%= render 'form' %>
