--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,10 +18,21 @@
     </p>
   </div>
 
-  <%= simple_form_for :card, html: {class: ''} do |f| %>
-    <%= f.input :answer, label: @guess_card_text,
+  <%= simple_form_for :card, html: {class: ''},
+      url: check_answer_path do |f| %>
+    <%= f.input :answer, label: @guess_card_text + '?',
         label_html: { class: 'font-weight-bold' },
+        :required => true,
         input_html: { value: nil } %>
-    <%= f.button :submit, t(:check), class: 'btn-primary mt-2' %>
+    <%= f.button :submit, t(:check), class: 'btn-primary mt-2',
+        data: { disable_with: t(:checking) } %>
   <% end %>
+
+  <%= button_to t(:next_card), {}, { class: 'btn-secondary' } %>
 </main>
+
+<%= render partial: 'partials/notice',
+    locals: {
+      notice_text: flash.notice,
+      class_name: @wrong_answer ? 'alert-danger' : 'alert-success',
+    } %>
