--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,8 @@
         data: { disable_with: t(:checking) } %>
   <% end %>
 
-  <%= button_to t(:next_card), {}, { class: 'btn-secondary' } %>
+  <%= button_to t(:next_card), { action: 'next_card' },
+      { class: 'btn-secondary' } %>
 </main>
 
 <%= render partial: 'partials/notice',
