--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
       <%= f.input :answer, label: @guess_card_text + '?',
           label_html: { class: 'font-weight-bold' },
           :required => true,
-          input_html: { value: nil } %>
+          input_html: { id: 'answer', value: nil } %>
       <%= f.button :submit, t(:check), class: 'btn-primary mt-2',
           data: { disable_with: t(:checking) } %>
     <% end %>
