--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <header class="clearfix">
   <ul class="navigation-links nav">
     <li class="nav-item">
-      <%= link_to t(:all_cards), cards_path, class: 'nav-link active' %>
+      <%= link_to t(:sign_in), cards_path, class: 'nav-link active' %>
     </li>
     <li class="nav-item">
-      <%= link_to t(:add_card), new_card_path, class: 'nav-link active' %>
+      <%= link_to t(:sign_up), new_user_path, class: 'nav-link active' %>
     </li>
   </ul>
 </header>
@@ -17,23 +17,4 @@
       <%=t('desc')%>
     </p>
   </div>
-
-  <% if @guess_card_text %>
-    <%= simple_form_for @answer, html: {class: ''},
-        url: card_answers_path(card_id: @card.id) do |f| %>
-      <%= f.hidden_field :phrase, :value => @guess_card_text %>
-      <%= f.input :answer, label: @guess_card_text + '?',
-          label_html: { class: 'font-weight-bold' },
-          :required => true,
-          input_html: { id: 'answer', value: nil } %>
-      <%= f.button :submit, t(:check), class: 'btn-primary mt-2',
-          data: { disable_with: t(:checking) } %>
-    <% end %>
-  <% end %>
 </main>
-
-<%= render partial: 'partials/notice',
-    locals: {
-      notice_text: flash.notice,
-      class_name: @wrong_answer ? 'alert-danger' : 'alert-success',
-    } %>
