--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,2 @@
-<h1>New User</h1>
-
+<%= render partial: 'partials/page-title', locals: {title: t(:account_creation)} %>
 <%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
