Password confirmation when signing up

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,3 +18,9 @@
     </p>
   </div>
 </main>
+
+<%= render partial: 'partials/notice',
+    locals: {
+      notice_text: flash.notice,
+      class_name: @wrong_answer ? 'alert-danger' : 'alert-success',
+    } %>
