--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <header class="clearfix">
   <ul class="navigation-links nav">
     <li class="nav-item">
-      <%= link_to t(:sign_in), cards_path, class: 'nav-link active' %>
+      <%= link_to t(:sign_in), new_user_session_path, class: 'nav-link active' %>
     </li>
     <li class="nav-item">
       <%= link_to t(:sign_up), new_user_path, class: 'nav-link active' %>
