--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for @user, html: {class: 'mt-4'} do |f| %>
   <div class="form-inputs">
     <%= f.input :email %>
-    <%= f.input :crypted_password %>
-    <%= f.input :crypted_password_confirmation, :required => true %>
+    <%= f.input :password %>
+    <%= f.input :password_confirmation, :required => true %>
   </div>
 
   <div class="form-actions">
