--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,23 @@
 <header class="clearfix">
   <ul class="navigation-links nav">
-    <li class="nav-item">
-      <%= link_to t(:sign_in), new_user_session_path, class: 'nav-link active' %>
-    </li>
-    <li class="nav-item">
-      <%= link_to t(:sign_up), new_user_path, class: 'nav-link active' %>
-    </li>
+    <% if current_user %>
+      <li class="nav-item">
+        <%= link_to t(:all_cards), cards_path, class: 'nav-link active' %>
+      </li>
+      <li>
+        <%= link_to t(:add_card), new_card_path, class: 'nav-link active' %>
+      </li>
+      <li>
+        <%= link_to t(:logout), logout_path, method: :delete, method: :delete, class: 'nav-link active' %>
+      </li>
+    <% else %>
+      <li class="nav-item">
+        <%= link_to t(:sign_in), :login, class: 'nav-link active' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to t(:sign_up), new_user_path, class: 'nav-link active' %>
+      </li>
+    <% end %>
   </ul>
 </header>
 
