--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         <%= link_to t(:add_card), new_card_path, class: 'nav-link active' %>
       </li>
       <li>
-        <%= link_to t(:logout), logout_path, method: :delete, method: :delete, class: 'nav-link active' %>
+        <%= link_to t(:logout), logout_path, method: :delete, class: 'nav-link active' %>
       </li>
     <% else %>
       <li class="nav-item">
