--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <head>
   <title><%=@page_title%></title>
-  <%= stylesheet_link_tag 'bootstrap.min', 'application' %>
+  <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <section id="container">
+  <section class="grid-container">
     <%= yield %>
   </section>
 </body>
