User can view only his own cards

--- a/app/views/partials/_page-title.html.erb
+++ b/app/views/partials/_page-title.html.erb
@@ -1,6 +1,6 @@
 <% @page_title = title %>
 <% unless current_page?(root_path) %>
-  <%= link_to :back, class: 'mb-3 d-block', title: t(:back) do %>
+  <%= link_to :back, class: 'mb-3 d-block backlink', title: t(:back) do %>
       <%= image_tag 'back.png', :width => '24' %>
   <% end %>
 <% end %>
