--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -1,4 +1,7 @@
-<%= render partial: 'partials/page-title', locals: {title: t(:all_cards)} %>
+<div class="cards__title">
+  <%= render partial: 'partials/page-title', locals: {title: t(:my_cards)} %>
+  <%= link_to t(:add_card), new_card_path, class: 'nav-link active' %>
+</div>
 
 <table class="table mt-4">
   <thead class="thead-dark">
