--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,12 +3,14 @@
 
 @import 'layouts/grid';
 
-@import 'blocks/notice';
-@import 'blocks/nav-link';
-@import 'blocks/cards';
-
-@import 'elements/icon';
-
 @import 'other/animations';
 @import 'other/modificators';
 @import 'other/common';
+@import 'other/vars';
+
+@import 'blocks/notice';
+@import 'blocks/nav-link';
+@import 'blocks/cards';
+@import 'blocks/oauth';
+
+@import 'elements/icon';
