--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @card, html: {class: 'mt-4'} do |f| %>
+<%= simple_form_for @card, html: { class: 'mt-4', multipart: true } do |f| %>
   <%= f.input :original_text, error: t(:original_text_err) %>
   <%= f.input :translated_text, error: t(:translated_text_err) %>
   <%= f.input :review_date, input_html: {
@@ -6,5 +6,9 @@
         min: today
       },
       as: :date, html5: true, :required => false %>
-  <%= f.button :submit, class: 'btn-primary mt-2' %>
+  <%= f.file_field :image %>
+  <%= f.hidden_field :image_cache %>
+  <div class="mt-3">
+    <%= f.button :submit, class: 'btn-primary mt-2' %>
+  </div>
 <% end %>
