--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,16 +16,23 @@
   </div>
 
   <% if @guess_card_text %>
-    <%= simple_form_for @answer, html: {class: ''},
-        url: card_answers_path(card_id: @card.id) do |f| %>
-      <%= f.hidden_field :phrase, :value => @guess_card_text %>
-      <%= f.input :answer, label: @guess_card_text + '?',
-          label_html: { class: 'font-weight-bold' },
-          :required => true,
-          input_html: { id: 'answer', value: nil } %>
-      <%= f.button :submit, t(:check), class: 'btn-primary mt-2',
-          data: { disable_with: t(:checking) } %>
-    <% end %>
+    <div class="mt-4">
+      <div>
+        <%= label_tag 'answer',
+            @guess_card_text + '?',
+            class: 'font-weight-bold font-size--larger' %>
+      </div>
+      <%= image_tag(@card.image.url, class: 'mt-2 mb-2') unless @card.image.file.nil? %>
+      <%= simple_form_for @answer, html: {class: ''},
+          url: card_answers_path(card_id: @card.id) do |f| %>
+        <%= f.hidden_field :phrase, :value => @guess_card_text %>
+        <%= f.input :answer, label: t(:enter_answer) + ':',
+            :required => true,
+            input_html: { id: 'answer', value: nil } %>
+        <%= f.button :submit, t(:check), class: 'btn-primary mt-2',
+            data: { disable_with: t(:checking) } %>
+      <% end %>
+    </div>
   <% end %>
 </main>
 
