Nav link helper

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import 'other/common';
 @import 'other/vars';
 
+@import 'blocks/header';
 @import 'blocks/notice';
 @import 'blocks/nav-link';
 @import 'blocks/cards';
