--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
 </head>
 <body>
   <section class="grid-container">
-    <%= yield %>
+    <%= render 'partials/header' %>
+    <main>
+      <%= yield %>
+    </main>
   </section>
 </body>
