--- a/app/assets/stylesheets/blocks/_nav-link.scss
+++ b/app/assets/stylesheets/blocks/_nav-link.scss
@@ -1,4 +1,9 @@
 .nav-link {
   display: inline-block;
   margin: 0 16px;
+  padding: 8px 0 0;
+
+  &.active {
+    border-bottom: 2px solid;
+  }
 }
