--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -6,8 +6,19 @@
         min: today
       },
       as: :date, html5: true, :required => false %>
-  <%= f.file_field :image %>
-  <%= f.hidden_field :image_cache %>
+  <div class="d-flex align-items-center">
+    <%= button_tag type: 'button' do %>
+      <%= label_tag 'img-upload', t(:select_img), class: 'mb-0'%>
+    <% end %>
+    <%= f.file_field :image, class: 'd-none', id: 'img-upload' %>
+
+    <% image_exist = @card.image? %>
+    <span class="ml-3 mr-2" id="upload-img-name">
+      <%=@card.image.identifier if image_exist%>
+    </span>
+    <% img_src = image_exist ? @card.image.thumb.url : '' %>
+    <%= image_tag(img_src, id: 'upload-img-preview') %>
+  </div>
   <div class="mt-3">
     <%= f.button :submit, class: 'btn-primary mt-2' %>
   </div>
