--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import 'other/vars';
 
 @import 'blocks/header';
+@import 'blocks/deck';
 @import 'blocks/page-title';
 @import 'blocks/notice';
 @import 'blocks/nav-link';
