--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -1,6 +1,7 @@
 <%= render partial: 'partials/page-title', locals: {title: t(:my_decks)} %>
 
 <% if decks? %>
+<table class="table mt-4">
   <thead class="thead-dark">
     <tr>
       <th><%=t(:name)%></th>
@@ -14,7 +15,9 @@
     <tr>
       <td><%=deck.name%></td>
       <td><%=deck.description%></td>
-      <td><%=deck.activity%></td>
+      <td>
+        <%= deck.activity ? t(:currently_viewed) : t(:currently_not_viewed) %>
+      </td>
       <td>
         <div>
           <button class="btn card-action-btn mr-1">
@@ -34,6 +37,7 @@
       </td>
     </tr>
   <% end %>
+</table>
 <% else %>
   <p class="font-size--larger"><%=t(:you_have_no_decks)%></p>
 <% end %>
@@ -43,4 +47,7 @@
   <i class="fa fa-plus ml-1 align-middle"></i>
 <% end %>
 
-<%= render partial: 'partials/notice', locals: {notice_text: flash.notice} %>
+<%= render partial: 'partials/notice', locals: {
+  notice_text: flash.notice,
+  class_name: 'alert-success'
+} %>
