Current deck helper

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
 @import 'blocks/deck';
 @import 'blocks/page-title';
 @import 'blocks/notice';
-@import 'blocks/nav-link';
+@import 'blocks/nav-item';
 @import 'blocks/oauth';
 
 @import 'elements/icon';
