--- a/app/views/partials/_user-menu.html.erb
+++ b/app/views/partials/_user-menu.html.erb
@@ -1,14 +1,13 @@
 <ul class="nav">
   <% if current_deck %>
+    <% deck_id = current_deck.id %>
     <li class="nav-item nav-item--deck">
-      <%= nav_link(edit_deck_path(current_deck),
-          current_deck.name.capitalize) %>
+      <%= nav_link(deck_cards_path(deck_id), deck_name(current_deck)) %>
+    </li>
+    <li class="nav-item">
+      <%= nav_link(new_deck_card_path(deck_id), t(:add_card)) %>
     </li>
   <% end %>
-
-  <li class="nav-item">
-    <%= nav_link(decks_path, t(:my_decks)) %>
-  </li>
 
   <li class="nav-item">
     <ul class="dropdown show">
@@ -21,6 +20,10 @@
       </li>
 
       <li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <%= link_to decks_path, class: 'dropdown-item' do %>
+            <%= t(:decks_list) %>
+            <i class="fa fa-clone ml-1"></i>
+        <% end %>
         <%= link_to edit_user_path(current_user),
             class: 'dropdown-item' do %>
               <%= t(:profile) %>
