--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -18,13 +18,13 @@
       <td>
         <div>
           <button class="btn card-action-btn mr-1">
-            <%= link_to edit_card_path(card) do %>
+            <%= link_to edit_deck_card_path(@deck, card) do %>
               <%=image_tag 'edit.png', :width => '24' %>
             <% end %>
           </button>
 
           <button class="btn card-action-btn">
-            <%= link_to card_path(card),
+            <%= link_to deck_card_path(@deck, card),
                method: :delete,
                data: {confirm: t(:delete_card_confirm)} do %>
                   <%=image_tag 'garbage.png', :width => '24' %>
