--- a/app/views/cards/index.html.erb
+++ b/app/views/cards/index.html.erb
@@ -19,7 +19,7 @@
         <div>
           <button class="btn card-action-btn mr-1">
             <%= link_to edit_deck_card_path(@deck, card) do %>
-              <%=image_tag 'edit.png', :width => '24' %>
+              <%=image_tag 'edit.png', width: '24' %>
             <% end %>
           </button>
 
@@ -27,7 +27,7 @@
             <%= link_to deck_card_path(@deck, card),
                method: :delete,
                data: {confirm: t(:delete_card_confirm)} do %>
-                  <%=image_tag 'garbage.png', :width => '24' %>
+                  <%=image_tag 'garbage.png', width: '24' %>
               <% end %>
           </button>
         </div>
@@ -41,4 +41,7 @@
   <i class="fa fa-plus ml-1 align-middle"></i>
 <% end %>
 
-<%= render partial: 'partials/notice', locals: {notice_text: flash.notice} %>
+<%= render partial: 'partials/notice', locals: {
+    notice_text: flash.notice,
+    class_name: 'alert-success'
+} %>
