--- a/app/views/partials/_page-title.html.erb
+++ b/app/views/partials/_page-title.html.erb
@@ -2,7 +2,7 @@
   <% @page_title = title %>
   <% unless current_page?(root_path) %>
     <%= link_to :back, class: 'mb-3 d-block backlink', title: t(:back) do %>
-        <%= image_tag 'back.png', :width => '24' %>
+        <%= image_tag 'back.png', width: '24' %>
     <% end %>
   <% end %>
   <h1><%=@page_title%></h1>
