--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -37,7 +37,7 @@
         </div>
       </td>
       <td class="align-middle">
-        <%= link_to t(:deck_cards), deck_cards_path(deck.id) %>
+        <%= link_to t(:deck_cards), deck_cards_path(deck.slug) %>
       </td>
     </tr>
   <% end %>
