--- a/app/assets/stylesheets/blocks/_nav-item.scss
+++ b/app/assets/stylesheets/blocks/_nav-item.scss
@@ -20,3 +20,10 @@
     border-bottom: 2px solid;
   }
 }
+
+.nav-item {
+    .dropdown-toggle::after {
+      position: relative;
+      top: 3px;
+    }
+}
