--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -7,22 +7,15 @@
         min: today
       },
       as: :date, html5: true, :required => false %>
-  <div class="d-flex align-items-center">
-    <%= button_tag type: 'button' do %>
-      <%= label_tag 'img-upload', t(:select_img), class: 'mb-0'%>
-    <% end %>
-    <%= f.file_field :image, class: 'd-none', id: 'img-upload' %>
 
-    <% image_exist = @card.image? %>
-    <span class="ml-3 mr-2" id="upload-img-name">
-      <%=@card.image.identifier if image_exist%>
-    </span>
-    <% img_src = image_exist ? @card.image.thumb.url : '' %>
-    <%= image_tag(img_src, id: 'upload-img-preview') %>
-  </div>
+  <%= render partial: 'partials/upload-img',
+      locals: {
+        form: f,
+        image_field: 'image',
+        model: @card,
+        formats: '.jpg, .png'
+      } %>
   <div class="mt-3">
     <%= f.button :submit, class: 'btn-primary mt-2' %>
   </div>
 <% end %>
-
-<%= javascript_include_tag 'other' %>
