--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,6 +3,18 @@
     <%= f.input :email %>
     <%= f.input :password %>
     <%= f.input :password_confirmation, :required => true %>
+    <% if defined? with_avatar %>
+      <div class="mb-3">
+        <%= label_tag t(:your_avatar) %>
+        <%= render partial: 'partials/upload-img',
+            locals: {
+              form: f,
+              model: @user,
+              image_field: 'avatar',
+              formats: '.gif, .png'
+            } %>
+      </div>
+    <% end %>
   </div>
 
   <div class="form-actions">
