--- a/app/views/cards/_form.html.erb
+++ b/app/views/cards/_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.input :original_text, error: t(:original_text_err) %>
   <%= f.input :translated_text, error: t(:translated_text_err) %>
   <%= f.input :review_date, input_html: {
-        value: Date.today.to_s,
+        value: today,
         min: today
       },
       as: :date, html5: true, :required => false %>
