--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,6 +25,8 @@
             data: { disable_with: t(:checking) } %>
       <% end %>
     </div>
+  <% else %>
+    <p><i><%= t(:cards_check_empty)%></i></p>
   <% end %>
 </section>
 
