--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,42 +7,8 @@
     </p>
   </div>
 
-  <% if @typos %>
-    <div class="mt-4">
-      <div class='font-weight-bold font-size--larger'>
-        <%=@card.original_text + '?'%>
-      </div>
-      <%= image_tag(@card.image.url, class: 'mt-2 mb-2') unless @card.image.file.nil? %>
-      <div>
-        <%=t(:your_answer)%>
-        <i class="text-info"><%=@answer.answer%></i>
-      </div>
-      <div>
-        <%=t(:right_answer)%>
-        <i class="text-success"><%=@card.translated_text%></i>
-      </div>
-    </div>
-
-    <%=link_to t(:next_card), root_path, class: 'btn btn-primary mt-3'%>
-
-  <% elsif @guess_card_text %>
-    <div class="mt-4">
-      <div>
-        <%= label_tag 'answer',
-            @guess_card_text + '?',
-            class: 'font-weight-bold font-size--larger' %>
-      </div>
-      <%= image_tag(@card.image.url, class: 'mt-2 mb-2') unless @card.image.file.nil? %>
-      <%= simple_form_for @answer, html: {class: ''},
-          url: card_answers_path(card_id: @card.id) do |f| %>
-        <%= f.hidden_field :phrase, :value => @guess_card_text %>
-        <%= f.input :answer, label: t(:enter_answer) + ':',
-            :required => true,
-            input_html: { id: 'answer', value: nil } %>
-        <%= f.button :submit, t(:check), class: 'btn-primary mt-2',
-            data: { disable_with: t(:checking) } %>
-      <% end %>
-    </div>
+  <% if @card.present? %>
+    <%= render 'review-card' %>
   <% else %>
     <p><i><%= t(:cards_check_empty)%></i></p>
   <% end %>
@@ -50,6 +16,6 @@
 
 <%= render partial: 'partials/notice',
     locals: {
-      notice_text: flash.notice,
-      class_name: @wrong_answer ? 'alert-danger' : 'alert-success',
+      notice_text: flash.notice || flash.alert,
+      class_name: flash.alert ? 'alert-danger' : 'alert-success',
     } %>
