--- a/app/views/partials/_user-menu.html.erb
+++ b/app/views/partials/_user-menu.html.erb
@@ -1,5 +1,5 @@
 <ul class="nav">
-  <% if current_deck %>
+  <% if current_deck = active_deck(current_user) %>
     <% deck_slug = current_deck.slug %>
     <li class="nav-item nav-item--deck">
       <%= nav_link(deck_cards_path(deck_slug), deck_name(current_deck)) %>
