--- a/app/views/home/_review-card.html.erb
+++ b/app/views/home/_review-card.html.erb
@@ -18,7 +18,7 @@
      method: :put,
      class: 'btn btn-primary mt-3'%>
 
-<% elsif @card.original_text %>
+<% else %>
   <div class="mt-4">
     <div>
       <%= label_tag 'answer',
