--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,10 +7,12 @@
     </p>
   </div>
 
-  <% if @card.present? %>
-    <%= render 'review-card' %>
-  <% else %>
-    <p><i><%= t(:cards_check_empty)%></i></p>
+  <% if current_user %>
+    <% if @card.present? %>
+      <%= render 'review-card' %>
+    <% else %>
+      <p><i><%= t(:cards_check_empty)%></i></p>
+    <% end %>
   <% end %>
 </section>
 
