Setup mails sending

--- a/app/views/notification_mailer/pending_cards.html.erb
+++ b/app/views/notification_mailer/pending_cards.html.erb
@@ -1,2 +1,2 @@
-<p><%=t(:pending_cards)%></p>
-<%= link_to t(:check), root_path %>
+<p><%=t(:pending_cards)%>.</p>
+<%= link_to t(:check), root_url %>
