--- a/app/views/partials/_guest-menu.html.erb
+++ b/app/views/partials/_guest-menu.html.erb
@@ -6,4 +6,8 @@
   <li class="nav-item">
     <%= nav_link(new_user_path, t(:sign_up)) %>
   </li>
+
+  <li class="nav-item">
+    <%= render 'partials/locale-chooser' %>
+  </li>
 </ul>
