--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,13 +7,9 @@
     </p>
   </div>
 
-  <% if current_user %>
-    <% if @card.present? %>
-      <%= render 'review-card' %>
-    <% else %>
-      <p><i><%= t(:cards_check_empty)%></i></p>
-    <% end %>
-  <% end %>
+  <div id="homepage-content">
+    <%= render 'user-card' %>
+  </div>
 </section>
 
 <%= render partial: 'partials/notice',
