--- a/app/views/home/_user-card.html.erb
+++ b/app/views/home/_user-card.html.erb
@@ -1,7 +1,9 @@
-<% if current_user %>
-  <% if @card.present? %>
-    <%= render 'review-card' %>
-  <% else %>
-    <p><i><%= t(:cards_check_empty)%></i></p>
+<div>
+  <% if current_user %>
+    <% if @card.present? %>
+      <%= render 'review-card' %>
+    <% else %>
+      <p><i><%= t(:cards_check_empty)%></i></p>
+    <% end %>
   <% end %>
-<% end %>
+</div>
