--- a/app/views/home/_user-card.html.erb
+++ b/app/views/home/_user-card.html.erb
@@ -6,4 +6,10 @@
       <p><i><%= t(:cards_check_empty)%></i></p>
     <% end %>
   <% end %>
+
+  <%= render partial: 'partials/notice',
+      locals: {
+        notice_text: flash.notice || flash.alert,
+        class_name: flash.alert ? 'alert-danger' : 'alert-success',
+      } %>
 </div>
