--- a/app/views/partials/_user-menu.html.erb
+++ b/app/views/partials/_user-menu.html.erb
@@ -24,16 +24,16 @@
       </li>
 
       <li class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <%= link_to decks_path, class: 'dropdown-item' do %>
+        <%= link_to dashboard_decks_path, class: 'dropdown-item' do %>
             <%= t(:decks_list) %>
             <i class="fa fa-clone ml-1"></i>
         <% end %>
-        <%= link_to edit_user_path(current_user),
+        <%= link_to edit_dashboard_user_path(current_user),
             class: 'dropdown-item' do %>
               <%= t(:profile) %>
               <i class="fa fa-edit ml-1"></i>
             <% end %>
-        <%= link_to logout_path,
+        <%= link_to dashboard_logout_path,
             method: :delete,
             class: 'dropdown-item' do %>
               <%= t(:logout) %>
