--- a/app/views/welcome/home/index.html.erb
+++ b/app/views/welcome/home/index.html.erb
@@ -1,9 +1,1 @@
-<section>
-  <%= render partial: 'partials/page-title', locals: {title: t(:title)} %>
-
-  <div>
-    <p class="font-size--larger">
-      <%=t('desc')%>
-    </p>
-  </div>
-</section>
+<%= render 'partials/home' %>
